--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -110,7 +110,7 @@ h6 .permalink { margin-left: -13px; }
     }
 
     .prose :where(pre):not(:where([class~="not-prose"] *)) {
-        @apply !text-[13px] relative bg-[length:2.5rem] bg-[left_0.5rem_top_0.5rem] bg-no-repeat pt-10;
+        @apply relative bg-[length:2.5rem] bg-[left_0.5rem_top_0.5rem] bg-no-repeat pt-10;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 12'%3E%3Ccircle cx='4' cy='6' r='2' fill='%23FF3B30'/%3E%3Ccircle cx='10' cy='6' r='2' fill='%23FF9500'/%3E%3Ccircle cx='16' cy='6' r='2' fill='%234CD964'/%3E%3C/svg%3E");
     }
 
