--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -119,7 +119,7 @@ h6 .permalink { margin-left: -13px; }
     }
 
     .code-title {
-        @apply relative z-10 text-sm italic text-zinc-500 -mb-[3.15rem] mt-[3.15rem] ml-[3.5rem];
+        @apply relative z-10 text-sm italic text-zinc-500 !-mb-[3.35rem] md:!-mb-[3.8755rem] ml-[3.5rem];
     }
 
     .code-copy {
